--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.0'
+    testImplementation 'org.projectlombok:lombok:1.18.26'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation 'io.projectreactor:reactor-core:3.5.3'
 }
